Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10832

Fatal assert on certain (wrong) ValueType syntax

    XMLWordPrintable

Details

    Description

      This:

      import Qt 4.7
      
      Rectangle {
          NumberAnimation {
              id: animator
              easing.type: Easing.InBounce
          }
      
          Component.onCompleted: { animator.easing = { "type": Easing.Linear }; }
      }
      

      fatals with:

      ASSERT: "m_object" in file .../declarative/qml/qdeclarativebinding.cpp, line 356
      Aborted
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aakenned Aaron Kennedy
            wallison Warwick Allison (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes