Remove incorrect ASSERT

QTBUG-10832